# ComfyUI-SAM3DBody

./: .gitignore  DEPTH_CORRECTION_IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  README.md  __init__.py  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  index.html  install.py  prestartup_script.py  pyproject.toml  requirements.txt  results.json
.github/workflows/: test-install.yml
.ipynb_checkpoints/: __init__-checkpoint.py
assets/: README.md  sam3d_rigged.fbx
dev/: index.html
dev/linux-cpu/: index.html  results.json
dev/linux-cpu/logs/: rigged_mesh_manipulation_resources.csv
dev/linux-gpu/: index.html  models.json
dev/linux-gpu/logs/: multiple_masks_depthcorrected_resources.csv  rigging_resources.csv
dev/macos-cpu/: index.html  results.json
dev/macos-cpu/logs/: rigged_mesh_manipulation_resources.csv
dev/windows-cpu/: index.html  results.json
dev/windows-cpu/logs/: rigged_mesh_manipulation_resources.csv
dev/windows-gpu/: index.html
dev/windows-gpu/logs/: multiple_masks_resources.csv  rigging_resources.csv
dev/windows-portable-cpu/: index.html  models.json  results.json
dev/windows-portable-gpu/: results.json
lib/: blender_export_multi.py  blender_export_sam3d_fbx.py
linux-gpu/: index.html  results.json
linux-gpu/videos/rigging/: metadata.json
main/: index.html
main/linux-cpu/: index.html  results.json
main/linux-gpu/: results.json
main/macos-cpu/: index.html  results.json
main/windows-gpu/: models.json  results.json
main/windows-portable-gpu/: index.html  models.json
nodes/: __init__.py  base.py  comfy-env.toml  export.py  load_mesh.py  load_model.py  preview.py  process.py  process_multiple.py  server.py  skeleton_io.py  visualize.py
nodes/processing/: __init__.py  export.py  load_mesh.py  load_model.py  preview.py  process.py  process_multiple.py  skeleton_io.py  skeleton_mesh.py  visualize.py
nodes/sam_3d_body/: attention.py  build_models.py  heads.py  lowvram.py  model.py  model_dinov3.py  prompt.py  sam_3d_body_estimator.py  transformer.py  utils_model.py  vit.py
sam_3d_body/: build_models.py  sam_3d_body_estimator.py
scripts/: convert_safetensors.py
tests/: test_inference.py
videos/multiple_masks/: metadata.json
videos/multiple_masks_depthcorrected/: metadata.json
videos/rigged_mesh_manipulation/: metadata.json
videos/rigging/: metadata.json
videos/workflow/: metadata.json
web/js/: sam3d_preview_mesh.js  viewer_inline.js
workflows/: README.md  multiple_masks.json  multiple_masks_depthcorrected.json  rigged_mesh_manipulation.json  rigging.json  workflow.json
(+44 files in other folders)
