[project]
name = "ComfyUI-SAM3DBody"
description = "SAM 3D Body integration for ComfyUI - Robust full-body human mesh recovery from single images. Reconstruct 3D human meshes with pose, shape, and hand details. First draft, please open a github issue if you have any problems or feature requests :)"
version = "0.2.1"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "SAM3DBody"
Icon = ""

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-SAM3DBody"
